--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -1,5 +1,7 @@
-body
-	background: #ff0
-	font-size: 200px
-	// +css-lock(16, 50, 600, 1000)
-	line-height: 1.4
+svg
+	transition: fill 0.4s ease
+	fill: $gradient !important
+	+h
+		fill: $accent
+
+
