--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,7 @@
 @import "helpers/*.sass"
 @import "base/*.sass"
 @import "generated/*.sass"
+@import _common
 
 @import "pages/*.sass"
 @import "components/*.sass"
