--- a/src/sass/base/_layout.sass
+++ b/src/sass/base/_layout.sass
@@ -22,6 +22,7 @@
 			background-color: transparent
 		&::-webkit-scrollbar-thumb
 			background-color: $accent
+			background-image: $gradientB
 			border-radius: 5px
 		&::-webkit-scrollbar-track-piece
 			background-color: transparent
