--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -230,3 +230,6 @@ title: Catalog
 
 	{% endblock %}
 
+	{% block scripts %}
+		<script type="text/javascript" src="js/catalog.js"></script>
+	{% endblock %}
