--- a/src/templates/partials/sidebar/_cart.html
+++ b/src/templates/partials/sidebar/_cart.html
@@ -1,5 +1,6 @@
-<div class="cart js-popup-onhover" data-popup="cart">
-	<div class="cart__icon">{{icon.i('cart')}}</div>
-	<div class="cart__info">3 items</div>
+<a href="checkout.html" class="cart js-popup-onhover" data-popup="cart">
+	<!-- <div class="cart__icon">{{icon.i('cart')}}</div> -->
+	<div class="cart__icon">3</div>
+	<div class="cart__info">Your cart</div>
 	<div class="cart__price">99$</div>
-</div>
+</a>
