--- a/src/sass/base/_sidebar.sass
+++ b/src/sass/base/_sidebar.sass
@@ -1,11 +1,11 @@
 .sidebar
 	width: 100%
-	height: 100%
-	padding: 10px 20px
+	height: auto
 	color: $white
 	font-family: $fa
 	font-weight: 700
 	z-index: 12
+	display: flex
 
 	svg
 		fill: $white
@@ -14,13 +14,16 @@
 		color: $white
 
 	&__container
+		padding: 10px
+		width: 100%
 		height: 100%
+		min-height: 100vh
 		display: flex
 		flex-direction: column
 
 	&__logo
 		width: 100%
-		margin-bottom: 30px
+		margin-bottom: 10px
 		height: 60px
 		display: flex
 		align-items: center
@@ -39,33 +42,37 @@
 			font-family: $fa
 			font-size: 28px
 
+	&__item
+		background-color: $blackb
+		padding: 6px 8px
+		border-radius: 6px
+		margin-bottom: 10px
+
+
 	&__search
 
 	&__navigation
-		margin: 30px 0
-		height: 100%
-		flex-grow: 1
+		margin: auto 0
 		display: flex
 		align-items: center
 
 	&__user
-		margin-bottom: 30px
+		margin-top: 10px
 
 	&__cart
-		margin-bottom: 30px
 
 	&__social
-		margin-bottom: 30px
 		display: flex
 		justify-content: center
 
 	&__contacts
-		margin-bottom: 30px
 
 	&__shedule
-		margin-bottom: 40px
 
 	&__copyright
+		font-family: $fa
 		width: 100%
 		text-align: center
 		font-size: 12px
+		font-weight: 300
+
