--- a/src/sass/partials/_filters.sass
+++ b/src/sass/partials/_filters.sass
@@ -158,7 +158,7 @@
 		left: 10%
 		right: 20%
 		background-color: $accent
-
+		background-image: $gradientR
 
 	&__price-slider-thingie
 		box-shadow: 0 0 4px 1px $black
