--- a/src/sass/partials/_home-slider.sass
+++ b/src/sass/partials/_home-slider.sass
@@ -117,7 +117,6 @@
 		flex-direction: column
 		align-items: center
 		padding: 20px 30px
-		border: 1px solid $accent
 		box-sizing: border-box
 		position: relative
 		+tr
@@ -131,6 +130,7 @@
 
 		&.swiper-slide-thumb-active
 			background-color: $accent
+			background-image: $gradient
 			color: $white
 			+h
 				cursor: default
