--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="theme-color" content="#fff"/>
   <meta name="format-detection" content="telephone=no"/>
-  <link href="https://fonts.googleapis.com/css?family=Oswald:300,500,700&display=swap&subset=cyrillic" rel="stylesheet">
-  <link rel="stylesheet" media="all" href="css/app.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Oswald:300,500,700&display=swap&subset=cyrillic" rel="stylesheet"></link>
+  <link rel="stylesheet" media="all" href="css/app.css"/></link>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.1/css/swiper.min.css"></link>
   {# {% include "../partials/_media-tags.html" %} #}
 </head>
 <body>
@@ -20,6 +20,7 @@
 
 
   <div class="layout">
+
     <div class="layout__sidebar">
       <div class="sidebar">
         <div class="sidebar__container">
@@ -29,18 +30,26 @@
             <div class="sidebar__logo-text">silverfox</div>
           </a>
 
-          <div class="sidebar__search">{% include "partials/sidebar/_search.html" %}</div>
-          <div class="sidebar__navigation">{% include "partials/sidebar/_navigation.html" %}</div>
-          <div class="sidebar__user">{% include "partials/sidebar/_user.html" %}</div>
-          <div class="sidebar__cart">{% include "partials/sidebar/_cart.html" %}</div>
-          <div class="sidebar__contacts">{% include "partials/sidebar/_contacts.html" %}</div>
-          <div class="sidebar__shedule">{% include "partials/sidebar/_shedule.html" %}</div>
-          <div class="sidebar__social">{% include "partials/sidebar/_social.html" %}</div>
+          <div class="sidebar__item sidebar__search">{% include "partials/sidebar/_search.html" %}</div>
+          <div class="sidebar__item sidebar__navigation">{% include "partials/sidebar/_navigation.html" %}</div>
+          <div class="sidebar__item sidebar__user">{% include "partials/sidebar/_user.html" %}</div>
+          <div class="sidebar__item sidebar__cart">{% include "partials/sidebar/_cart.html" %}</div>
+          <div class="sidebar__item sidebar__contacts">{% include "partials/sidebar/_contacts.html" %}</div>
+          <div class="sidebar__item sidebar__shedule">{% include "partials/sidebar/_shedule.html" %}</div>
+          <div class="sidebar__item sidebar__social">{% include "partials/sidebar/_social.html" %}</div>
+          <div class="sidebar__item sidebar__social">
+            <div class="language-switcher">
+              <div class="language-switcher__item active">EN</div>
+              <div class="language-switcher__item">UA</div>
+              <div class="language-switcher__item">RU</div>
+            </div>
+          </div>
 
-          <div class="sidebar__copyright">Copyright</div>
+          <div class="sidebar__copyright">silverfox© 2019</div>
         </div>
       </div>
     </div>
+
     <div class="layout__content">
 
       <!-- BEGIN content -->
@@ -55,7 +64,8 @@
   </div>
 
   <!-- BEGIN scripts -->
-  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/global.js"></script>
+  {% block scripts %}{% endblock %}
   <!-- END scripts -->
 
 </body>
