--- a/src/templates/partials/sidebar/_search.html
+++ b/src/templates/partials/sidebar/_search.html
@@ -1,5 +1,4 @@
 <div class="search">
-	{{icon.i('search')}}
-	<input type="text" class="search__input" />
-	<div class="search__action">Search!</div>
+	<input type="text" class="search__input" placeholder="Search here ..." />
+	<div class="search__action">{{icon.i('search')}}</div>
 </div>
