--- a/src/sass/base/_sidebar.sass
+++ b/src/sass/base/_sidebar.sass
@@ -47,7 +47,7 @@
 		padding: 6px 8px
 		border-radius: 6px
 		margin-bottom: 10px
-
+		+tr
 
 	&__search
 
@@ -58,8 +58,16 @@
 
 	&__user
 		margin-top: 10px
+		+h
+			cursor: pointer
+			background-color: $accent
+			background-image: $gradient
 
 	&__cart
+		+h
+			cursor: pointer
+			background-color: $accent
+			background-image: $gradient
 
 	&__social
 		display: flex
