--- a/src/sass/cards/_card-catalog-item.sass
+++ b/src/sass/cards/_card-catalog-item.sass
@@ -1,6 +1,7 @@
 .card-catalog-item
 	width: 100%
 	position: relative
+	color: $black
 	+materialShadow(0,3, $accent)
 	+h
 
@@ -22,6 +23,8 @@
 
 		&:before
 			opacity: 1
+	a
+		color: $black
 
 	&:before
 		content: ""
