--- a/src/templates/catalog.html
+++ b/src/templates/catalog.html
@@ -171,7 +171,7 @@ title: Catalog
 				<div class="catalog__content-list js-catalog grid">
 					<!-- <div class="catalog__content-item catalog__content-item--list"> -->
 						{% for page in range(1, 12) %}
-						<div class="catalog__content-item">
+						<a href="catalog-view.html" class="catalog__content-item">
 							<div class="card-catalog-item">
 								<div class="card-catalog-item__container">
 									<div class="card-catalog-item__label">new</div>
@@ -194,7 +194,7 @@ title: Catalog
 									</div>
 								</div>
 							</div>
-						</div>
+						</a>
 						{% endfor %}
 
 						<div class="catalog__content-item">
