--- a/src/templates/partials/sidebar/_search.html
+++ b/src/templates/partials/sidebar/_search.html
@@ -1,4 +1,13 @@
 <div class="search">
-	<input type="text" class="search__input" placeholder="Search here ..." />
+	<input type="text" class="search__input js-search-input" placeholder="Search here ..." />
 	<div class="search__action">{{icon.i('search')}}</div>
+
+	<div class="search__dropdown js-search-dropdown">
+		<div class="search__item">Search result</div>
+		<div class="search__item">Search result</div>
+		<div class="search__item">Search result</div>
+		<div class="search__item">Search result</div>
+		<div class="search__item">Search result</div>
+		<div class="search__item">Search result</div>
+	</div>
 </div>
