--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,9 +1,31 @@
 @import "helpers/*.sass"
 @import "base/*.sass"
 @import "generated/*.sass"
-@import _common
+@import _common.sass
+@import _common.scss
 
 @import "pages/*.sass"
 @import "components/*.sass"
 @import "partials/*.sass"
 @import "cards/*.sass"
+
+
+
+
+
+// @mixin alpha($property, $color-variable, $opacity)
+//   $color-variable-h: var(#{$color-variable+'-h'})
+//   $color-variable-s: var(#{$color-variable+'-s'})
+//   $color-variable-l: var(#{$color-variable+'-l'})
+//   #{$property}: hsla($color-variable-h, $color-variable-s, $color-variable-l, $opacity)
+
+
+// .component
+//   @include alpha(background-color, --color-primary, 0.2)
+
+
+// :root, [data-theme="default"]
+//   --color-primary: hsl(220, 90%, 56%)
+//   --color-primary-h: 220
+//   --color-primary-s: 90%
+//   --color-primary-l: 56%
