--- a/src/sass/base/_layout.sass
+++ b/src/sass/base/_layout.sass
@@ -14,7 +14,7 @@
 		min-height: 100vh
 		overflow-x: hidden
 		overflow-y: auto
-		background-color: $black
+		background-color: var(--color-black)
 		&::-webkit-scrollbar
 			background-color: transparent
 			width: 10px
@@ -31,7 +31,7 @@
 		width: 100%
 		overflow-x: hidden
 		overflow-y: auto
-		background-color: $white
+		background-color: var(--color-white)
 		position: relative
 		color: #000
 
@@ -48,7 +48,7 @@
 		justify-content: center
 		align-items: center
 		margin: 0 20px 20px
-		border: 1px solid $black
+		border: 1px solid var(--color-black)
 
 	&__content-title
 		font-size:  34px
