--- a/src/sass/base/_sidebar.sass
+++ b/src/sass/base/_sidebar.sass
@@ -1,17 +1,17 @@
 .sidebar
 	width: 100%
 	height: auto
-	color: $white
+	color: var(--color-white)
 	font-family: $fa
 	font-weight: 700
 	z-index: 12
 	display: flex
 
 	svg
-		fill: $white
+		fill: var(--color-white)
 
 	a
-		color: $white
+		color: var(--color-white)
 
 	&__container
 		padding: 10px
@@ -32,7 +32,7 @@
 				+rotate(360*10)
 
 		.logo
-			margin-right: 30px
+			margin-right: 10px
 			width: 60px
 			height: 60px
 			+trs(1400)
@@ -43,11 +43,32 @@
 			font-size: 28px
 
 	&__item
-		background-color: $blackb
+		background-color: var(--color-black-d)
 		padding: 6px 8px
 		border-radius: 6px
 		margin-bottom: 10px
 		+tr
+		&--nobg
+			background-color: transparent
+
+		.theme-switcher
+			display: flex
+			width: 20px
+			min-width: 20px
+			margin-left: 20px
+			+h
+				cursor: pointer
+			svg
+				width: 100%
+				height: 20px
+
+	&__logo-link
+		display: flex
+		align-items: center
+
+	&__logo
+		display: flex
+		align-items: center
 
 	&__search
 
