--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,33 +1,48 @@
-@mixin defineColorHSL($color, $hue, $saturation, $lightness){
-  #{$color}: unquote("hsl(#{$hue}, #{$saturation}, #{$lightness})");#{$color}-h: #{$hue};#{$color}-s: #{$saturation};#{$color}-l: #{$lightness};
+@mixin defineColorHSL($color, $hue, $saturation, $lightness, $opacity: 1){
+  #{$color}: unquote("hsl(#{$hue}, #{$saturation}, #{$lightness}, #{$opacity})");#{$color}-h: #{$hue};#{$color}-s: #{$saturation};#{$color}-l: #{$lightness};
 }
 
 :root, [data-theme="light"] {
-  @include defineColorHSL(--color-accent, 351, 52%, 43%);
-  @include defineColorHSL(--color-black, 216, 19%, 10%);
-  @include defineColorHSL(--color-black-d, 232, 19%, 16%);
-  @include defineColorHSL(--color-white, 96, 71%, 99%);
+  // @include defineColorHSL(--color-mainGrad1, 314, 93%, 89%);
+  // @include defineColorHSL(--color-mainGrad2, 284, 20%, 89%);
+  // @include defineColorHSL(--color-mainGrad3, 284, 20%, 89%);
+  @include defineColorHSL(--color-mainGrad1, 340, 82%, 84%);
+  @include defineColorHSL(--color-mainGrad2, 180, 43%, 82%);
+  @include defineColorHSL(--color-mainGrad3, 162, 53%, 92%);
+  //correct
+  @include defineColorHSL(--color-bg,        0, 0%, 80%, 0.5);
+  @include defineColorHSL(--color-bgDark,    0, 0%, 95%);
+  @include defineColorHSL(--color-bgDarker,  0, 0%, 95%, 0.5);
+  @include defineColorHSL(--color-bgLighter, 0, 0%, 99%, 1);
+  @include defineColorHSL(--color-text,      216, 19%, 10%);
+  @include defineColorHSL(--color-border,    231, 39%, 7%, 0.5);
   // color contrasts
-  @include defineColorHSL(--color-bg, 0, 0%, 100%);
-  @include defineColorHSL(--color-contrast-lower, 0, 0%, 95%);
-  @include defineColorHSL(--color-contrast-low, 240, 1%, 83%);
-  @include defineColorHSL(--color-contrast-medium, 240, 1%, 48%);
-  @include defineColorHSL(--color-contrast-high, 240, 4%, 20%);
-  @include defineColorHSL(--color-contrast-higher, 240, 8%, 12%);
+  // @include defineColorHSL(--color-bg, 0, 0%, 100%);
+  // @include defineColorHSL(--color-contrast-lower, 0, 0%, 95%);
+  // @include defineColorHSL(--color-contrast-low, 240, 1%, 83%);
+  // @include defineColorHSL(--color-contrast-medium, 240, 1%, 48%);
+  // @include defineColorHSL(--color-contrast-high, 240, 4%, 20%);
+  // @include defineColorHSL(--color-contrast-higher, 240, 8%, 12%);
 }
 
 :root, [data-theme="dark"] {
-  @include defineColorHSL(--color-accent, 351, 52%, 43%);
-  @include defineColorHSL(--color-black, 96, 71%, 99%);
-  @include defineColorHSL(--color-black-d, 96, 0%, 72%);
-  @include defineColorHSL(--color-white, 216, 19%, 10%);
+  @include defineColorHSL(--color-mainGrad1, 212, 19%, 20%);
+  @include defineColorHSL(--color-mainGrad2, 211, 16%, 34%);
+  @include defineColorHSL(--color-mainGrad3, 211, 16%, 30%);
+  //correct
+  @include defineColorHSL(--color-bg,        231, 28%, 10%, 0.5);
+  @include defineColorHSL(--color-bgDark,    231, 39%, 7%);
+  @include defineColorHSL(--color-bgDarker,  231, 39%, 7%, 0.5);
+  @include defineColorHSL(--color-bgLighter, 228, 37%, 7%, 1);
+  @include defineColorHSL(--color-text,      96, 71%, 99%, 1);
+  @include defineColorHSL(--color-border,    0, 0%, 95%, 0.5);
   // color contrasts
-  @include defineColorHSL(--color-bg, 0, 0%, 100%);
-  @include defineColorHSL(--color-contrast-lower, 0, 0%, 95%);
-  @include defineColorHSL(--color-contrast-low, 240, 1%, 83%);
-  @include defineColorHSL(--color-contrast-medium, 240, 1%, 48%);
-  @include defineColorHSL(--color-contrast-high, 240, 4%, 20%);
-  @include defineColorHSL(--color-contrast-higher, 240, 8%, 12%);
+  // @include defineColorHSL(--color-bg, 0, 0%, 100%);
+  // @include defineColorHSL(--color-contrast-lower, 0, 0%, 95%);
+  // @include defineColorHSL(--color-contrast-low, 240, 1%, 83%);
+  // @include defineColorHSL(--color-contrast-medium, 240, 1%, 48%);
+  // @include defineColorHSL(--color-contrast-high, 240, 4%, 20%);
+  // @include defineColorHSL(--color-contrast-higher, 240, 8%, 12%);
 }
 
 @function lightness($color, $lightnessMultiplier){
