--- a/src/sass/base/_popup.sass
+++ b/src/sass/base/_popup.sass
@@ -4,9 +4,8 @@
 	top: 0
 	height: 100vh
 	width: calc(100vw - 320px)
-	background-color: $white
+	background-color: var(--color-bgDark)
 	z-index: 10
-	border-left: 1px solid $accent
 	transform: translateX(-150%)
 	+tr
 
@@ -22,6 +21,7 @@
 
 	&__title
 		margin-bottom: 40px
+		color: var(--color-text)
 		font-size: 36px
 		font-family: $fa
 		font-weight: 700
