--- a/src/sass/cards/_card-catalog-small.sass
+++ b/src/sass/cards/_card-catalog-small.sass
@@ -40,7 +40,7 @@
 		display: flex
 		flex-grow: 1
 		font-family: $fd
-		color: $black
+		color: var(--color-text)
 		font-size: 22px
 		+text-overflow
 		+tr
@@ -48,7 +48,7 @@
 	&__price
 		font-size:  14px
 		font-family: $fd
-		color: $black
+		color: var(--color-text)
 		+tr
 
 	&__action
