--- a/src/sass/pages/_catalog-view.sass
+++ b/src/sass/pages/_catalog-view.sass
@@ -6,7 +6,7 @@
 	&__container
 		width: 100%
 		display: flex
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		padding: 20px
 
 	&__col
@@ -123,7 +123,7 @@
 		margin-bottom: 20px
 
 	&__count-input
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		width: 40px
 		height: 40px
 		font-family: $fd
