--- a/src/sass/partials/_comment-add.sass
+++ b/src/sass/partials/_comment-add.sass
@@ -5,7 +5,7 @@
 
 	&__title
 		margin-bottom: 40px
-		color: $black
+		color: var(--color-text)
 		font-size: 18px
 		font-family: $fd
 		font-weight: 500
@@ -16,20 +16,20 @@
 		flex-direction: column
 		border-radius: 8px
 		overflow: hidden
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 
 	&__box
 		width: 100%
 		display: flex
 		border-radius: 0 0 8px 8px
 		overflow: hidden
-		border-top: 1px solid $black
+		border-top: 1px solid var(--color-border)
 
 	&__item
 		height: 40px
 		width: calc(100% / 3)
 		position: relative
-		border-right: 1px solid $black
+		border-right: 1px solid var(--color-border)
 		&:last-child
 			border-right: none
 
