--- a/src/sass/partials/_popup-catalogue.sass
+++ b/src/sass/partials/_popup-catalogue.sass
@@ -2,6 +2,7 @@
 	width: 100%
 	display: flex
 	font-family: $fd
+	color: var(--color-text)
 
 	&__categories
 		min-width: 200px
@@ -17,7 +18,7 @@
 	&__category-item
 		display: flex
 		align-items: center
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		margin-bottom: -1px
 		min-height: 100px
 		padding: 10px
@@ -59,7 +60,7 @@
 		justify-content: space-between
 		width: 25%
 		height: 100px
-		border: 1px solid #000
+		border: 1px solid var(--color-border)
 		margin-right: -1px
 		margin-bottom: -1px
 		padding: 10px
