--- a/src/sass/base/_sidebar.sass
+++ b/src/sass/base/_sidebar.sass
@@ -1,17 +1,17 @@
 .sidebar
 	width: 100%
 	height: auto
-	color: var(--color-white)
+	display: flex
+	z-index: 12
+	color: var(--color-text)
 	font-family: $fa
 	font-weight: 700
-	z-index: 12
-	display: flex
 
 	svg
-		fill: var(--color-white)
+		fill: var(--color-text)
 
 	a
-		color: var(--color-white)
+		color: var(--color-text)
 
 	&__container
 		padding: 10px
@@ -43,10 +43,10 @@
 			font-size: 28px
 
 	&__item
-		background-color: var(--color-black-d)
 		padding: 6px 8px
 		border-radius: 6px
 		margin-bottom: 10px
+		background-color: var(--color-bgDarker)
 		+tr
 		&--nobg
 			background-color: transparent
@@ -59,6 +59,7 @@
 			+h
 				cursor: pointer
 			svg
+
 				width: 100%
 				height: 20px
 
@@ -79,16 +80,36 @@
 
 	&__user
 		margin-top: 10px
-		+h
-			cursor: pointer
+		position: relative
+		overflow: hidden
+		&:after
+			content: ''
+			+coverdiv
 			background-color: $accent
 			background-image: $gradient
+			opacity: 0
+			+tr
+			z-index: -1
+		+h
+			cursor: pointer
+			&:after
+				opacity: 1
 
 	&__cart
-		+h
-			cursor: pointer
+		position: relative
+		overflow: hidden
+		&:after
+			content: ''
+			+coverdiv
 			background-color: $accent
 			background-image: $gradient
+			opacity: 0
+			+tr
+			z-index: -1
+		+h
+			cursor: pointer
+			&:after
+				opacity: 1
 
 	&__social
 		display: flex
