--- a/src/sass/cards/_card-blog.sass
+++ b/src/sass/cards/_card-blog.sass
@@ -49,12 +49,10 @@
 		font-size: 20px
 		line-height: 22px
 		min-height: 25px
-		color: $black
+		color: var(--color-text)
 		margin-bottom: 20px
 		+text-overflow
 		+tr
-		+h
-			color: $accent
 
 	&__content
 		overflow: hidden
