--- a/src/sass/cards/_card-catalog-item.sass
+++ b/src/sass/cards/_card-catalog-item.sass
@@ -44,6 +44,7 @@
 			align-items: center
 			justify-content: center
 		svg
+			fill: var(--color-text)
 			width: 50px
 			height: 50px
 
@@ -88,7 +89,7 @@
 		align-items: flex-end
 
 	&__title
-		color: $black
+		color: var(--color-text)
 		font-size: 18px
 		font-family: $fc
 		+tr
@@ -97,6 +98,7 @@
 			text-transform: uppercase
 
 	&__price
+		color: var(--color-text)
 		font-family: $fc
 		font-size: 22px
 		+tr
