--- a/src/sass/components/_breadcrumbs.sass
+++ b/src/sass/components/_breadcrumbs.sass
@@ -7,7 +7,8 @@
 	a
 		display: flex
 		align-items: center
-		color: #000
+		color: var(--color-text)
+		+tr
 		&:after
 			content: ">"
 			margin: 0 10px
