--- a/src/sass/components/_btn.sass
+++ b/src/sass/components/_btn.sass
@@ -7,9 +7,9 @@ $btnHeightBig: 60px
 	align-items: center
 	height: $btnHeight
 	padding: 0 10px
-	border: 1px solid $black
-	color: $black
-	font-family: $fd
+	border: 1px solid var(--color-text)
+	color: var(--color-text)
+	font-family: $fc
 	font-size: 14px
 	line-height: $btnHeight
 	white-space: nowrap
@@ -26,7 +26,7 @@ $btnHeightBig: 60px
 		width: 14px
 		height: 14px
 		min-width: 14px
-		fill: $black
+		fill: var(--color-text)
 		margin-right: 14px
 		+tr
 
