--- a/src/sass/components/_cart.sass
+++ b/src/sass/components/_cart.sass
@@ -13,7 +13,7 @@
 		min-width: 40px
 		height: 40px
 		border-radius: 50%
-		border: 1px solid $white
+		border: 1px solid var(--color-text)
 		padding: 9px
 		overflow: hidden
 
