--- a/src/sass/components/_checkout-login.sass
+++ b/src/sass/components/_checkout-login.sass
@@ -6,7 +6,7 @@
 
 	&__tabs
 		position: relative
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 
 
 	&__tab
@@ -46,8 +46,8 @@
 		line-height: 30px
 		font-family: $fc
 		font-size: 14px
-		color: #000
-		border-right: 1px solid $black
+		color: var(--color-text)
+		border-right: 1px solid var(--color-border)
 		+tr
 		+h
 			cursor: pointer
@@ -63,8 +63,8 @@
 	&__head
 		width: 100%
 		display: flex
-		border-top: 1px solid $black
-		border-bottom: 1px solid $black
+		border-top: 1px solid var(--color-border)
+		border-bottom: 1px solid var(--color-border)
 
 	&__head-title
 		line-height: 30px
@@ -85,7 +85,7 @@
 
 	&__input
 		min-width: 200px
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		line-height: 34px
 		height: 34px
 		padding: 0 10px
@@ -114,8 +114,8 @@
 		&:last-child
 			margin-right: 0
 		svg
-			fill: $black
-			stroke: #000066
+			fill: var(--color-text)
+			// stroke: red
 			+tr
 
 	&__user
@@ -145,7 +145,7 @@
 	&__user-name
 		font-size: 22px
 		font-family: $fc
-		color: #000
+		color: var(--color-text)
 
 	&__user-list
 		min-width: 260px
@@ -156,7 +156,7 @@
 		display: flex
 		align-items: center
 		font-family: $fc
-		color: #000
+		color: var(--color-text)
 		margin-bottom: 6px
 		&:last-child
 			margin-bottom: 0
@@ -178,7 +178,7 @@
 		color: $accent
 
 		&--small
-			color: $black
+			color: var(--color-text)
 			font-size: 20px
 
 	&__card
@@ -189,7 +189,7 @@
 		flex-wrap: wrap
 
 	&__card-input
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		width: 100%
 		height: 34px
 		padding: 0 10px
