--- a/src/sass/components/_coupon.sass
+++ b/src/sass/components/_coupon.sass
@@ -2,7 +2,7 @@
 	display: flex
 	flex-direction: column
 	align-items: center
-	border: 1px solid $black
+	border: 1px solid var(--color-border)
 	padding: 20px 15px
 
 	&__title
@@ -14,7 +14,7 @@
 
 	&__form
 		display: flex
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		max-width: 262px
 		margin-bottom: 20px
 
@@ -25,7 +25,7 @@
 		padding: 0 20px
 
 	&__form-action
-		border-left: 1px solid $black
+		border-left: 1px solid var(--color-border)
 		width: 40px
 		min-width: 40px
 		height: 40px
@@ -37,7 +37,7 @@
 	&__discount
 		margin-bottom: 6px
 		font-size: 16px
-		color: $black
+		color: var(--color-text)
 		font-family: $fd
 		line-height: 18px
 		&:last-child
