--- a/src/sass/components/_search.sass
+++ b/src/sass/components/_search.sass
@@ -10,11 +10,11 @@
 		width: 100%
 		background-color: transparent
 		border: 0
-		border-bottom: 2px solid $white
+		border-bottom: 2px solid var(--color-text)
 		line-height: 40px
 		padding: 0 10px
 		font-family: $fc
-		color: $white
+		color: var(--color-text)
 		+tr
 		&:hover, &:active, &:focus
 			border-color: $accent
@@ -37,7 +37,7 @@
 		svg
 			width: 20px
 			height: 20px
-			fill: $white
+			fill: var(--color-text)
 
 	&__dropdown
 		+materialShadow(2,3,$white)
