--- a/src/sass/components/_user.sass
+++ b/src/sass/components/_user.sass
@@ -8,11 +8,11 @@
 		max-width: 40px
 		height: 40px
 		margin-right: 20px
-		border: 1px solid $white
+		border: 1px solid var(--color-text)
 		border-radius: 50%
 		text-align: center
 		line-height: 40px
-		color: $white
+		color: var(--color-text)
 
 	&__name
 		width: 100%
@@ -25,7 +25,7 @@
 		height: 20px
 		+h
 			svg
-				fill: $white
+				fill: var(--color-text)
 				+scale(1.1)
 		svg
 			+tr
