--- a/src/sass/helpers/_variables.sass
+++ b/src/sass/helpers/_variables.sass
@@ -1,4 +1,6 @@
-$accent: #A63446
+// $accent: #A63446
+$accent: #db1f51
+// $accent: #f02459
 $accentLight: #D1495B
 $accent2: #EDAE49
 $white: #FBFEF9
@@ -9,6 +11,10 @@ $fa: 'Arvo', serif
 $fc: 'Comfortaa', serif
 $fd: 'Duru Sans', serif
 
-$gradient: linear-gradient(to right bottom, #e65758, #ca4750, #ae3846, #922a3d, #771d32)
-$gradientR: linear-gradient(to right, #e65758, #ca4750, #ae3846, #922a3d, #771d32)
-$gradientB: linear-gradient(to bottom, #e65758, #ca4750, #ae3846, #922a3d, #771d32)
+// $gradient: linear-gradient(to right bottom, #e65758, #ca4750, #ae3846, #922a3d, #771d32)
+// $gradientR: linear-gradient(to right, #e65758, #ca4750, #ae3846, #922a3d, #771d32)
+// $gradientB: linear-gradient(to bottom, #e65758, #ca4750, #ae3846, #922a3d, #771d32)
+
+$gradient: linear-gradient(to right bottom, #f02459, #db1f51, #f02459)
+$gradientR: linear-gradient(to right, #f02459, #db1f51, #f02459)
+$gradientB: linear-gradient(to bottom, #f02459, #db1f51, #f02459)
