--- a/src/sass/pages/_aboutUs.sass
+++ b/src/sass/pages/_aboutUs.sass
@@ -19,7 +19,7 @@
 		&--35
 			width: 35%
 		&--bordered
-			border: 1px solid $black
+			border: 1px solid var(--color-border)
 
 
 	&__title
@@ -68,7 +68,7 @@
 
 	&__list-item-container
 		padding: 15px
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		+tr
 
 
