--- a/src/sass/pages/_blog-view.sass
+++ b/src/sass/pages/_blog-view.sass
@@ -97,7 +97,7 @@
 		font-size: 16px
 
 	&__content
-		background-color: $white
+		background-color: var(--color-bgDark)
 		width: 100%
 		max-width: 700px
 		display: flex
