--- a/src/sass/pages/_blog.sass
+++ b/src/sass/pages/_blog.sass
@@ -4,7 +4,7 @@
 	font-family: $fc
 
 	&__container
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		width: 100%
 		display: flex
 		flex-direction: column
@@ -13,7 +13,7 @@
 	&__filter-container
 		display: flex
 		width: 100%
-		border-bottom: 1px solid $black
+		border-bottom: 1px solid var(--color-border)
 
 	&__filter-item
 		width: calc(100% / 3)
@@ -23,7 +23,7 @@
 		align-items: center
 		position: relative
 		padding: 0 20px
-		border-right: 1px solid $black
+		border-right: 1px solid var(--color-border)
 		&:last-child
 			border-right: none
 		+h
@@ -36,10 +36,11 @@
 				max-height: 300px
 				padding: 20px 20px
 				overflow: visible
-				border: 1px solid $black
+				border: 1px solid var(--color-border)
 				border-top: none
 
 	&__filter-title
+
 		font-size: 16px
 		font-weight: 700
 
@@ -59,8 +60,8 @@
 		left: -1px
 		right: -1px
 		z-index: 5
-		background-color: $white
-		border: 1px solid $black
+		background-color: var(--color-bgDark)
+		border: 1px solid var(--color-border)
 		border-top: none
 		+tr
 		+h
@@ -76,7 +77,7 @@
 			color: $accent
 
 	&__item
-		border-bottom: 1px solid $black
+		border-bottom: 1px solid var(--color-border)
 		&:nth-child(odd)
 			.card-blog
 				flex-direction: row-reverse
@@ -109,10 +110,10 @@
 		display: flex
 		flex-wrap: wrap
 		margin: -1px
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 
 	&__random-item
-		border: 1px solid $white
+		// border: 1px solid red
 		width: 100%
 		height: 240px
 
