--- a/src/sass/pages/_checkout.sass
+++ b/src/sass/pages/_checkout.sass
@@ -20,11 +20,11 @@
 		padding: 0 10px
 
 	&__list-item
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		border-top: none
 		width: 100%
 		&:nth-child(1)
-			border-top: 1px solid $black
+			border-top: 1px solid var(--color-border)
 
 	&__item
 		width: 50%
