--- a/src/sass/partials/_catalog-filters.sass
+++ b/src/sass/partials/_catalog-filters.sass
@@ -2,7 +2,7 @@
 	width: 100%
 	display: flex
 	height: 50px
-	border: 1px solid $black
+	border: 1px solid var(--color-border)
 	margin-bottom: -1px
 	border-left: none
 
@@ -13,7 +13,7 @@
 		align-items: center
 		position: relative
 		padding: 0 10px
-		border-left: 1px solid $black
+		border-left: 1px solid var(--color-border)
 		&:last-child
 			padding: 0
 		+h
@@ -51,7 +51,7 @@
 		top: 100%
 		width: 100%
 		left: 0
-		background-color: $white
+		background-color: var(--color-bgDark)
 		opacity: 0
 		padding: 10px
 		+tr
@@ -75,7 +75,7 @@
 		display: flex
 		align-items: center
 		justify-content: center
-		border-right: 1px solid $black
+		border-right: 1px solid var(--color-border)
 		+tr
 		+h
 			svg
@@ -108,4 +108,5 @@
 		text-align: center
 		font-size: 12px
 		line-height: 20px
+		+tr
 
