--- a/src/sass/partials/_comments.sass
+++ b/src/sass/partials/_comments.sass
@@ -9,7 +9,7 @@
 		align-items: center
 
 	&__title
-		color: $black
+		color: var(--color-text)
 		font-size: 18px
 		font-family: $fd
 		font-weight: 500
@@ -26,7 +26,7 @@
 		display: flex
 		flex-direction: column
 		padding: 40px 0
-		border-bottom: 1px solid $black
+		border-bottom: 1px solid var(--color-border)
 		&:last-child
 			border-bottom: none
 
@@ -45,7 +45,7 @@
 		width: 60px
 		height: 60px
 		background-color: $accent
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		margin-right: 20px
 
 	&__item-box
@@ -104,7 +104,7 @@
 		font-size: 12px
 		line-height: 20px
 		text-align: center
-		color: $black
+		color: var(--color-text)
 		font-family: $fd
 		font-weight: 700
 
