--- a/src/sass/partials/_filters.sass
+++ b/src/sass/partials/_filters.sass
@@ -4,7 +4,7 @@
 	flex-direction: column
 
 	&__head
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		border-right: none
 		width: 100%
 		display: flex
@@ -23,7 +23,7 @@
 		width: 50px
 		height: 50px
 		padding: 10px
-		border-left: 1px solid $black
+		border-left: 1px solid var(--color-border)
 		display: flex
 		align-items: center
 		justify-content: center
@@ -44,7 +44,7 @@
 		margin-bottom: -1px
 		padding: 10px
 		padding-bottom: 16px
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		border-right: none
 		+tr
 		+h
@@ -141,7 +141,8 @@
 		border-radius: 50px
 		padding: 0 15px
 		width: 46%
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
+		color: var(--color-text)
 		line-height: 40px
 
 	&__price-slider
@@ -161,7 +162,7 @@
 		background-image: $gradientR
 
 	&__price-slider-thingie
-		box-shadow: 0 0 4px 1px $black
+		box-shadow: 0 0 4px 1px var(--color-border)
 		border-radius: 50%
 		background-color: $white
 		width: 16px
