--- a/src/sass/partials/_home-layout.sass
+++ b/src/sass/partials/_home-layout.sass
@@ -3,6 +3,7 @@
 	padding: 10px 0
 
 	&__container
+		padding: 0 20px
 		margin: 0 -10px
 		display: flex
 		flex-wrap: wrap
@@ -28,18 +29,18 @@
 		display: block
 		width: 100%
 		height: 100%
-		box-shadow: inset 0 0 0 1px $accent
+		box-shadow: inset 0 0 0 1px var(--color-border)
 		position: relative
+		+tr
 		+h
 			cursor: pointer
-			.home-layout__title
-				color: $accent
-			svg
-				fill: $accent
-
+			box-shadow: inset 0 0 0 1px $accent
 			.home-layout__label
+				background-color: $accent
+				color: $white
 				svg
 					fill: $white
+
 
 	&__label
 		display: flex
@@ -48,16 +49,17 @@
 		right: 0px
 		top: 0px
 		padding: 6px
-		background-color: $accent
-		color: $white
+		background-color: var(--color-border)
+		color: var(--color-bgDark)
 		font-size: 14px
 		font-family: $fc
 		font-weight: 500
+		+tr
 		svg
+			fill: var(--color-bgDark)
 			margin-right: 10px
 			width: 14px
 			height: 14px
-			fill: $white
 
 	&__title-container
 		display: flex
@@ -70,7 +72,7 @@
 	&__title
 		margin-bottom: 8px
 		font-family: $fc
-		color: $black
+		color: var(--color-text)
 		+tr
 
 		&:last-child
@@ -92,8 +94,8 @@
 		+coverdiv
 		+coverimg
 		+scale(0.8)
-		color: $accent
+		color: var(--color-text)
+		svg
+			+tr
 
-	svg
-		+tr
 
