--- a/src/sass/partials/_popup-cart.sass
+++ b/src/sass/partials/_popup-cart.sass
@@ -3,27 +3,28 @@
 	height: 100%
 	display: flex
 	flex-direction: column
+	color: var(--color-text)
 
 	&__list-actions
 		width: 100%
 		display: flex
 		justify-content: flex-end
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 
 	&__list-action
 		display: flex
 		align-items: center
 		justify-content: center
 		border-left: none
-		border-left: 1px solid $black
+		border-left: 1px solid var(--color-border)
 		padding: 5px
 		&:first-child
-			border-left: 1px solid $black
+			border-left: 1px solid var(--color-border)
 		+h
 			background-color: $accent
 			cursor: pointer
 			svg
-				fill: $white
+				fill: var(--color-text)
 
 		svg
 			width: 18px
@@ -40,7 +41,7 @@
 
 	&__item
 		width: 100%
-		border: 1px solid $black
+		border: 1px solid var(--color-border)
 		border-top: none
 
 	&__actions
