--- a/src/sass/partials/_stats.sass
+++ b/src/sass/partials/_stats.sass
@@ -1,13 +1,13 @@
 .stats
 	width: 100%
 	height: 100%
-	border: 1px solid $black
+	border: 1px solid var(--color-border)
 
 	&__title
 		font-size: 26px
 		font-family: $fd
 		padding: 20px
-		border-bottom: 1px solid $black
+		border-bottom: 1px solid var(--color-border)
 		text-align: center
 
 	&__list
